# active_object_slam

./: CMakeLists.txt  README _ORIGIN.md  README copy.md  README.md  README_wu.md  build_thirdparty.sh  noros_CMakeLists.txt  old_README.md
config/: TUM1.yaml  TUM3.yaml  TUM3_ros.yaml  kinectdk.yaml  kinectdk_720.yaml  kinectdk_lj.yaml  kinectv1.yaml
data/: t_test.txt
eval/: Candidates.txt  GlobalNBV.txt  KeyFrameTrajectory1.txt  Objects.txt  Objects_points.txt  Objects_with_points.txt  Objects_with_points_for_read.txt  eval.cpp  extract_gazebo_groudth.cpp  groudtruth.txt  old Objects.txt  rviz_GT_and_model.cpp  rviz_nbv.cpp
eval 备份/: Objects.txt  Objects_with_points.txt  Objects_with_points_for_read.txt  eval.cpp  extract_gazebo_groudth.cpp  rviz_gazebo_object.cpp
eval 备份/highdesk2/: Objects.txt
eval 备份/test2/: groudtruth.txt
eval 备份/tum_teddy/: Objects_with_points (copy).txt
eval 备份/单个桌子 Gnbv的物体评价和nbv展示/: GlobalNBV.txt  Objects_with_points.txt
eval 备份/单个桌子 cover/: GlobalNBV.txt  Objects.txt
eval 备份/备份/: GlobalNBV.txt  Objects.txt  Objects_with_points.txt  groudtruth_twodesk.txt  旧groudtruth.txt
eval 备份/物体真值/: groudtruth（单个桌子 提高了键盘的厚度）.txt
eval 备份/用作单个桌子 我的方法的NBV展示/: GlobalNBV.txt
eval/TEST/: groudtruth.txt
eval/highdesk/: Objects.txt  Objects_with_points.txt
eval/highdesk2/: Objects_with_points.txt
eval/onedesk/onedesk_cover 轨迹真值/: KeyFrameTrajectory修正高度.txt  Objects.txt  Objects_with_points.txt
eval/onedesk/onedesk_cover物体/: Objects.txt  Objects召回率.txt
eval/onedesk/onedesk_frontier 物体微调/: Objects_with_points.txt
eval/onedesk/onedesk_frontier 轨迹真值/: Objects_with_points.txt  Objects修改掉明显有问题的超小物体.txt
eval/onedesk/onedesk_mynbv_KF轨迹/: GlobalNBV.txt  Objects.txt  Objects_with_points.txt
eval/onedesk/onedesk_mynbv_NBV展示/: Objects.txt  Objects_with_points.txt
eval/onedesk/onedesk_mynbv_NBV展示和KF轨迹/: GlobalNBV.txt  GlobalNBV反复版.txt  GlobalNBV省略版.txt  Objects.txt
eval/onedesk/onedesk_mynbv_物体zhanshi_from_ppt_video/: GlobalNBV.txt  Objects.txt
eval/onedesk/onedesk_mynbv_物体评价/: Objects 修正了笔记本的高度.txt
eval/onedesk/onedesk物体真值/: groudtruth修正yoloid.txt  groudtruth修正yoloid和顺序.txt  groudtruth（单个桌子。只有9个前景物体）.txt
eval/onedesk_cover/: Objects1.txt  Objects_with_points.txt
eval/onedesk_cover 轨迹真值/: Objects对应真值数量.txt
eval/onedesk_frontier/: Objects_with_points.txt
eval/onedesk_frontier 最终微调/: Objects.txt
eval/onedesk_frontier 物体微调/: Objects召回率.txt
eval/onedesk_frontier 花瓶没建立/: Objects.txt
eval/onedesk_frontier 轨迹真值/: GlobalNBV自制.txt  Objects.txt  Objects准确率.txt
eval/onedesk_mynbv_NBV展示  最终/: GlobalNBV.txt
eval/onedesk_mynbv_NBV展示 2/: Objects.txt  Objects_with_points.txt
eval/onedesk_mynbv_物体评价/: Objects 修正了笔记本的高度.txt  Objects_with_points.txt  Objects召回率.txt
eval/onedesk物体真值/: groudtruth修正yoloid和顺序.txt
eval/temp/: GlobalNBV.txt  Objects.txt  Objects_with_points.txt
eval/threedesk/threedesk_cover 物体准确率/: Objects_with_points.txt  Objects准确率.txt
eval/threedesk/threedesk_cover 物体召回率/: Objects.txt  Objects_with_points.txt  Objects召回率.txt
eval/threedesk/threedesk_frontier/: KeyFrameTrajectory润色.txt  Objects_with_points.txt  Objects准确率.txt  Objects召回率.txt
eval/threedesk/threedesk_my KF润色/: GlobalNBV.txt  KeyFrameTrajectory润色.txt  Objects.txt  Objects_with_points.txt
eval/threedesk/threedesk_my nbv润色/: GlobalNBV 润色.txt  GlobalNBV.txt  Objects.txt  Objects_with_points.txt
eval/threedesk/threedesk_my 物体润色/: GlobalNBV.txt  Objects.txt  Objects_with_points.txt  Objects准确率.txt  Objects召回率.txt
eval/threedesk/threedesk物体真值/: groudtruth.txt
eval/tum_teddy/: Objects_with_points_for_read (重构程序前的文件).txt  Objects_with_points_for_read.txt
eval/twodesk/twodesk 物体真值/: groudtruth.txt
eval/twodesk/twodesk_cover 1 物体模型和FK/: Objects.txt  Objects_with_points.txt  Objects召回率.txt
eval/twodesk/twodesk_cover 为1补充 笔记本model/: Objects_with_points.txt
eval/twodesk/twodesk_frontier KF轨迹和NBV/: GlobalNBV.txt
eval/twodesk_cover 1 物体模型和FK/: Objects准确率.txt
eval/twodesk_cover 为1补充 笔记本model/: Objects.txt
eval/twodesk_frontier KF轨迹和NBV/: Objects.txt  Objects_with_points.txt
eval/twodesk_frontier_rosbag 物体建模/: Objects_with_points.txt  Objects准确率.txt  Objects召回率.txt
eval/twodesk_my  KF轨迹丢失/: GlobalNBV.txt  Objects.txt  Objects_with_points.txt
eval/twodesk_my  还需要多次运行，以优化轨迹和KF/: GlobalNBV.txt  Objects.txt  Objects_with_points.txt
eval/twodesk_my best/: GlobalNBV.txt  Objects_with_points.txt  Objects原数据.txt  Objects召回率.txt
eval/twodesk_my 半途而废版/: GlobalNBV.txt  Objects.txt  Objects_with_points.txt
eval/video 3/: Objects.txt  Objects_with_points.txt  Objects调整版.txt
eval/video1/: Objects.txt  Objects_with_points.txt
eval/video2/: GlobalNBV.txt  Objects.txt  Objects_with_points.txt
eval/video4/: GlobalNBV.txt  Objects.txt  Objects_with_points.txt
eval/view_planning_method_pic/lbv轨迹、gbv四个/: GlobalNBV.txt  KeyFrameTrajectory降低高度到1.2.txt  (+2 more)
eval/用于在系统图中展示GBV和LBV，需要机器人模型的配合/: Objects_with_points.txt
eval新备份/onedesk_frontier/: Objects.txt
eval新备份/onedesk_frontier 花瓶没建立/: Objects_with_points.txt
eval新备份/onedesk_frontier_同步录制和建模/: GlobalNBV.txt  Objects.txt  Objects_with_points.txt
evo/: evo.cpp  evo.h
include/: BackgroudObject.h  Converter.h  Frame.h  FrameDrawer.h  KeyFrame.h  LocalMapping.h  Map.h  MapDrawer.h  MapPlane.h  MapPoint.h  MapPublisher.h  NbvGenerator.h  Object.h  System.h  Tracking.h  Viewer.h  camera.h  isolation_forest.h  read_local_objects.h  yolo_id.h  yolo_label.h
include/PEAC/: eig33sym.hpp
include/detect_3d_cuboid/: matrix_utils.h
launch/: kinectdk.launch  kinectdk_for_tumrosbag.launch  kinectv1.launch
mesh/: bear.dae  bear_brown.dae  teddy_bear.dae
ros_src/: init_test.cpp  rgbd.cpp  rviz_dae.cpp
rviz/: active_slam.rviz
src/: BackgroudObject.cc  Converter.cc  Frame.cc  FrameDrawer.cc  KeyFrame.cc  LocalMapping.cc  Map.cc  MapDrawer.cc  MapPlane.cc  MapPoint.cc  MapPublisher.cc  NbvGenerator.cpp  Object.cpp  Optimizer.cc  System.cc  Tracking.cc  Viewer.cc  camera.cc  read_local_objects.cpp
src/CAPE/: CAPE.h  CylinderSeg.h  Histogram.h  PlaneSeg.h
src/detect_3d_cuboid/: box_proposal_detail.cpp
